Dashboard: Replace automatic banner rotation with random initial display and manual arrows
Replace the automatic timed banner rotation with a random initial banner
selection and small, manually operated arrow buttons for navigation.
Previous behavior can be restored by setting BannerRotation.automaticRotationEnabled to true.

The original slides used position:absolute + opacity for transitions.
This was changed to display:none/block because absolutely positioned
children don't contribute to their parent container's dimensions, causing
the banner containers to collapse to zero width/height. The arrow buttons
(position:absolute, top:50%) need a parent with real dimensions to
center correctly. With display:none/block, the active slide determines
the container's natural size.

The fixed height:60px on .gold-banner was removed for the same reason —
it clipped banner images that are taller than 60px.

An explicit height was added to .header-banner to ensure the arrow
buttons can vertically center via top:50% within the platinum banner area.

--- a/src/serena/resources/dashboard/index.html
+++ b/src/serena/resources/dashboard/index.html
@@ -26,6 +26,8 @@
 
         <!-- Platinum Banners in Header -->
         <div id="platinum-banners" class="header-banner">
+            <button class="banner-arrow banner-arrow-left" data-target="platinum" aria-label="Previous banner">&#8249;</button>
+            <button class="banner-arrow banner-arrow-right" data-target="platinum" aria-label="Next banner">&#8250;</button>
         </div>
     </div>
 
@@ -147,6 +149,8 @@
 
                 <!-- Gold Banners -->
                 <section id="gold-banners" class="gold-banners-section">
+                    <button class="banner-arrow banner-arrow-left" data-target="gold" aria-label="Previous banner">&#8249;</button>
+                    <button class="banner-arrow banner-arrow-right" data-target="gold" aria-label="Next banner">&#8250;</button>
                 </section>
             </div>
         </div>
